gen/com/github/kumaraman21/intellijbehave/parser/StoryPegParser.java
// This is a generated file. Not intended for manual editing.
package com.github.kumaraman21.intellijbehave.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.github.kumaraman21.intellijbehave.parser.IStoryPegElementType.*;
import static com.github.kumaraman21.intellijbehave.peg.StoryPegParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class StoryPegParser implements PsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == STORY_DESCRIPTION) {
      r = Description(b, 0);
    }
    else if (t == STORY_EXAMPLES) {
      r = Examples(b, 0);
    }
    else if (t == STORY_GIVEN_STORIES) {
      r = GivenStories(b, 0);
    }
    else if (t == STORY_IP_ADDRESS) {
      r = IpAddress(b, 0);
    }
    else if (t == STORY_LIFECYCLE) {
      r = Lifecycle(b, 0);
    }
    else if (t == STORY_LIFECYCLE_AFTER) {
      r = LifecycleAfter(b, 0);
    }
    else if (t == STORY_LIFECYCLE_BEFORE) {
      r = LifecycleBefore(b, 0);
    }
    else if (t == STORY_META_ELEMENT) {
      r = MetaElement(b, 0);
    }
    else if (t == STORY_META_KEY) {
      r = MetaKey(b, 0);
    }
    else if (t == STORY_META_STATEMENT) {
      r = MetaStatement(b, 0);
    }
    else if (t == STORY_META_VALUE) {
      r = MetaValue(b, 0);
    }
    else if (t == STORY_NARRATIVE) {
      r = Narrative(b, 0);
    }
    else if (t == STORY_NARRATIVE_TEXT) {
      r = NarrativeText(b, 0);
    }
    else if (t == STORY_SCENARIO) {
      r = Scenario(b, 0);
    }
    else if (t == STORY_SCENARIO_TITLE) {
      r = ScenarioTitle(b, 0);
    }
    else if (t == STORY_STEP) {
      r = Step(b, 0);
    }
    else if (t == STORY_STEP_ARGUMENT) {
      r = StepArgument(b, 0);
    }
    else if (t == STORY_STEP_LINE) {
      r = StepLine(b, 0);
    }
    else if (t == STORY_STEP_PAR) {
      r = StepPar(b, 0);
    }
    else if (t == STORY_STEP_POST_PARAMETER) {
      r = StepPostParameter(b, 0);
    }
    else if (t == STORY_STORY) {
      r = Story(b, 0);
    }
    else if (t == STORY_STORY_PATH) {
      r = StoryPath(b, 0);
    }
    else if (t == STORY_STORY_PATHS) {
      r = StoryPaths(b, 0);
    }
    else if (t == STORY_TABLE) {
      r = Table(b, 0);
    }
    else if (t == STORY_TABLE_CELL) {
      r = TableCell(b, 0);
    }
    else if (t == STORY_TABLE_CELL_EMPTY) {
      r = TableCellEmpty(b, 0);
    }
    else if (t == STORY_TABLE_ROW) {
      r = TableRow(b, 0);
    }
    else if (t == STORY_URI) {
      r = Uri(b, 0);
    }
    else if (t == STORY_URI_IDENTIFIER) {
      r = UriIdentifier(b, 0);
    }
    else if (t == STORY_URI_WORD) {
      r = UriWord(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return root(b, l + 1);
  }

  /* ********************************************************** */
  // TOKEN_WORD
  static boolean Alnum(PsiBuilder b, int l) {
    return consumeToken(b, STORY_TOKEN_WORD);
  }

  /* ********************************************************** */
  // MultiTextLine
  public static boolean Description(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Description")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<description>");
    r = MultiTextLine(b, l + 1);
    exit_section_(b, l, m, STORY_DESCRIPTION, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // TOKEN_EXAMPLES (Table|StoryPath)
  public static boolean Examples(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Examples")) return false;
    if (!nextTokenIs(b, STORY_TOKEN_EXAMPLES)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, null);
    r = consumeToken(b, STORY_TOKEN_EXAMPLES);
    p = r; // pin = 1
    r = r && Examples_1(b, l + 1);
    exit_section_(b, l, m, STORY_EXAMPLES, r, p, null);
    return r || p;
  }

  // Table|StoryPath
  private static boolean Examples_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Examples_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Table(b, l + 1);
    if (!r) r = StoryPath(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // TOKEN_GIVEN_STORIES SpaceStar StoryPaths Newline
  public static boolean GivenStories(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "GivenStories")) return false;
    if (!nextTokenIs(b, STORY_TOKEN_GIVEN_STORIES)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, null);
    r = consumeToken(b, STORY_TOKEN_GIVEN_STORIES);
    p = r; // pin = 1
    r = r && report_error_(b, SpaceStar(b, l + 1));
    r = p && report_error_(b, StoryPaths(b, l + 1)) && r;
    r = p && Newline(b, l + 1) && r;
    exit_section_(b, l, m, STORY_GIVEN_STORIES, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // TOKEN_IP | Alnum ('.' Alnum)+
  public static boolean IpAddress(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "IpAddress")) return false;
    if (!nextTokenIs(b, "<ip address>", STORY_TOKEN_IP, STORY_TOKEN_WORD)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<ip address>");
    r = consumeToken(b, STORY_TOKEN_IP);
    if (!r) r = IpAddress_1(b, l + 1);
    exit_section_(b, l, m, STORY_IP_ADDRESS, r, false, null);
    return r;
  }

  // Alnum ('.' Alnum)+
  private static boolean IpAddress_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "IpAddress_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Alnum(b, l + 1);
    r = r && IpAddress_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ('.' Alnum)+
  private static boolean IpAddress_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "IpAddress_1_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = IpAddress_1_1_0(b, l + 1);
    int c = current_position_(b);
    while (r) {
      if (!IpAddress_1_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "IpAddress_1_1", c)) break;
      c = current_position_(b);
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // '.' Alnum
  private static boolean IpAddress_1_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "IpAddress_1_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ".");
    r = r && Alnum(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // TOKEN_LIFECYCLE LifecycleBefore? LifecycleAfter?
  public static boolean Lifecycle(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Lifecycle")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, "<lifecycle>");
    r = consumeToken(b, STORY_TOKEN_LIFECYCLE);
    p = r; // pin = 1
    r = r && report_error_(b, Lifecycle_1(b, l + 1));
    r = p && Lifecycle_2(b, l + 1) && r;
    exit_section_(b, l, m, STORY_LIFECYCLE, r, p, RecoverMeta_parser_);
    return r || p;
  }

  // LifecycleBefore?
  private static boolean Lifecycle_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Lifecycle_1")) return false;
    LifecycleBefore(b, l + 1);
    return true;
  }

  // LifecycleAfter?
  private static boolean Lifecycle_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Lifecycle_2")) return false;
    LifecycleAfter(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // TOKEN_AFTER Step+
  public static boolean LifecycleAfter(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "LifecycleAfter")) return false;
    if (!nextTokenIs(b, STORY_TOKEN_AFTER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, STORY_TOKEN_AFTER);
    r = r && LifecycleAfter_1(b, l + 1);
    exit_section_(b, m, STORY_LIFECYCLE_AFTER, r);
    return r;
  }

  // Step+
  private static boolean LifecycleAfter_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "LifecycleAfter_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Step(b, l + 1);
    int c = current_position_(b);
    while (r) {
      if (!Step(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "LifecycleAfter_1", c)) break;
      c = current_position_(b);
    }
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // TOKEN_BEFORE Step+
  public static boolean LifecycleBefore(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "LifecycleBefore")) return false;
    if (!nextTokenIs(b, STORY_TOKEN_BEFORE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, STORY_TOKEN_BEFORE);
    r = r && LifecycleBefore_1(b, l + 1);
    exit_section_(b, m, STORY_LIFECYCLE_BEFORE, r);
    return r;
  }

  // Step+
  private static boolean LifecycleBefore_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "LifecycleBefore_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Step(b, l + 1);
    int c = current_position_(b);
    while (r) {
      if (!Step(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "LifecycleBefore_1", c)) break;
      c = current_position_(b);
    }
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Word (WordSeparator Word)*
  static boolean Line(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Line")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Word(b, l + 1);
    r = r && Line_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (WordSeparator Word)*
  private static boolean Line_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Line_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!Line_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Line_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // WordSeparator Word
  private static boolean Line_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Line_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = WordSeparator(b, l + 1);
    r = r && Word(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // MetaKey Space MetaValue (Space|Newline)
  public static boolean MetaElement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "MetaElement")) return false;
    if (!nextTokenIs(b, STORY_TOKEN_AT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, null);
    r = MetaKey(b, l + 1);
    p = r; // pin = 1
    r = r && report_error_(b, Space(b, l + 1));
    r = p && report_error_(b, MetaValue(b, l + 1)) && r;
    r = p && MetaElement_3(b, l + 1) && r;
    exit_section_(b, l, m, STORY_META_ELEMENT, r, p, null);
    return r || p;
  }

  // Space|Newline
  private static boolean MetaElement_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "MetaElement_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Space(b, l + 1);
    if (!r) r = Newline(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // TOKEN_AT (Word|TOKEN_COLON)+
  public static boolean MetaKey(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "MetaKey")) return false;
    if (!nextTokenIs(b, STORY_TOKEN_AT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, null);
    r = consumeToken(b, STORY_TOKEN_AT);
    p = r; // pin = 1
    r = r && MetaKey_1(b, l + 1);
    exit_section_(b, l, m, STORY_META_KEY, r, p, null);
    return r || p;
  }

  // (Word|TOKEN_COLON)+
  private static boolean MetaKey_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "MetaKey_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = MetaKey_1_0(b, l + 1);
    int c = current_position_(b);
    while (r) {
      if (!MetaKey_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "MetaKey_1", c)) break;
      c = current_position_(b);
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // Word|TOKEN_COLON
  private static boolean MetaKey_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "MetaKey_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Word(b, l + 1);
    if (!r) r = consumeToken(b, STORY_TOKEN_COLON);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // TOKEN_META (Newline|Space)? (MetaElement)*
  public static boolean MetaStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "MetaStatement")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, "<meta statement>");
    r = consumeToken(b, STORY_TOKEN_META);
    p = r; // pin = 1
    r = r && report_error_(b, MetaStatement_1(b, l + 1));
    r = p && MetaStatement_2(b, l + 1) && r;
    exit_section_(b, l, m, STORY_META_STATEMENT, r, p, RecoverMeta_parser_);
    return r || p;
  }

  // (Newline|Space)?
  private static boolean MetaStatement_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "MetaStatement_1")) return false;
    MetaStatement_1_0(b, l + 1);
    return true;
  }

  // Newline|Space
  private static boolean MetaStatement_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "MetaStatement_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Newline(b, l + 1);
    if (!r) r = Space(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (MetaElement)*
  private static boolean MetaStatement_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "MetaStatement_2")) return false;
    int c = current_position_(b);
    while (true) {
      if (!MetaStatement_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "MetaStatement_2", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // (MetaElement)
  private static boolean MetaStatement_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "MetaStatement_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = MetaElement(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // (Word|TOKEN_COLON)+
  public static boolean MetaValue(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "MetaValue")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<meta value>");
    r = MetaValue_0(b, l + 1);
    int c = current_position_(b);
    while (r) {
      if (!MetaValue_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "MetaValue", c)) break;
      c = current_position_(b);
    }
    exit_section_(b, l, m, STORY_META_VALUE, r, false, null);
    return r;
  }

  // Word|TOKEN_COLON
  private static boolean MetaValue_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "MetaValue_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Word(b, l + 1);
    if (!r) r = consumeToken(b, STORY_TOKEN_COLON);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // (SpaceStar Line Newline)+
  static boolean MultiTextLine(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "MultiTextLine")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = MultiTextLine_0(b, l + 1);
    int c = current_position_(b);
    while (r) {
      if (!MultiTextLine_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "MultiTextLine", c)) break;
      c = current_position_(b);
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // SpaceStar Line Newline
  private static boolean MultiTextLine_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "MultiTextLine_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = SpaceStar(b, l + 1);
    r = r && Line(b, l + 1);
    r = r && Newline(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // TOKEN_NARRATIVE Newline? NarrativeText
  public static boolean Narrative(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Narrative")) return false;
    if (!nextTokenIs(b, STORY_TOKEN_NARRATIVE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, null);
    r = consumeToken(b, STORY_TOKEN_NARRATIVE);
    p = r; // pin = 1
    r = r && report_error_(b, Narrative_1(b, l + 1));
    r = p && NarrativeText(b, l + 1) && r;
    exit_section_(b, l, m, STORY_NARRATIVE, r, p, null);
    return r || p;
  }

  // Newline?
  private static boolean Narrative_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Narrative_1")) return false;
    Newline(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // MultiTextLine
  public static boolean NarrativeText(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "NarrativeText")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<narrative text>");
    r = MultiTextLine(b, l + 1);
    exit_section_(b, l, m, STORY_NARRATIVE_TEXT, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // TOKEN_NEWLINE
  static boolean Newline(PsiBuilder b, int l) {
    return consumeToken(b, STORY_TOKEN_NEWLINE);
  }

  /* ********************************************************** */
  // !(TOKEN_NARRATIVE|TOKEN_GIVEN_STORIES|TOKEN_LIFECYCLE|TOKEN_SCENARIO|TOKEN_WHEN|TOKEN_GIVEN|TOKEN_THEN|TOKEN_AND|Newline|TOKEN_COMMENT|TOKEN_EXAMPLES)
  static boolean RecoverMeta(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "RecoverMeta")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_, null);
    r = !RecoverMeta_0(b, l + 1);
    exit_section_(b, l, m, null, r, false, null);
    return r;
  }

  // TOKEN_NARRATIVE|TOKEN_GIVEN_STORIES|TOKEN_LIFECYCLE|TOKEN_SCENARIO|TOKEN_WHEN|TOKEN_GIVEN|TOKEN_THEN|TOKEN_AND|Newline|TOKEN_COMMENT|TOKEN_EXAMPLES
  private static boolean RecoverMeta_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "RecoverMeta_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, STORY_TOKEN_NARRATIVE);
    if (!r) r = consumeToken(b, STORY_TOKEN_GIVEN_STORIES);
    if (!r) r = consumeToken(b, STORY_TOKEN_LIFECYCLE);
    if (!r) r = consumeToken(b, STORY_TOKEN_SCENARIO);
    if (!r) r = consumeToken(b, STORY_TOKEN_WHEN);
    if (!r) r = consumeToken(b, STORY_TOKEN_GIVEN);
    if (!r) r = consumeToken(b, STORY_TOKEN_THEN);
    if (!r) r = consumeToken(b, STORY_TOKEN_AND);
    if (!r) r = Newline(b, l + 1);
    if (!r) r = consumeToken(b, STORY_TOKEN_COMMENT);
    if (!r) r = consumeToken(b, STORY_TOKEN_EXAMPLES);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // TOKEN_SCENARIO SpaceStar ScenarioTitle? Newline? MetaStatement? Newline? GivenStories? Newline? ((Step |StepComment)+ Examples?)*
  public static boolean Scenario(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Scenario")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, "<scenario>");
    r = consumeToken(b, STORY_TOKEN_SCENARIO);
    p = r; // pin = 1
    r = r && report_error_(b, SpaceStar(b, l + 1));
    r = p && report_error_(b, Scenario_2(b, l + 1)) && r;
    r = p && report_error_(b, Scenario_3(b, l + 1)) && r;
    r = p && report_error_(b, Scenario_4(b, l + 1)) && r;
    r = p && report_error_(b, Scenario_5(b, l + 1)) && r;
    r = p && report_error_(b, Scenario_6(b, l + 1)) && r;
    r = p && report_error_(b, Scenario_7(b, l + 1)) && r;
    r = p && Scenario_8(b, l + 1) && r;
    exit_section_(b, l, m, STORY_SCENARIO, r, p, RecoverMeta_parser_);
    return r || p;
  }

  // ScenarioTitle?
  private static boolean Scenario_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Scenario_2")) return false;
    ScenarioTitle(b, l + 1);
    return true;
  }

  // Newline?
  private static boolean Scenario_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Scenario_3")) return false;
    Newline(b, l + 1);
    return true;
  }

  // MetaStatement?
  private static boolean Scenario_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Scenario_4")) return false;
    MetaStatement(b, l + 1);
    return true;
  }

  // Newline?
  private static boolean Scenario_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Scenario_5")) return false;
    Newline(b, l + 1);
    return true;
  }

  // GivenStories?
  private static boolean Scenario_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Scenario_6")) return false;
    GivenStories(b, l + 1);
    return true;
  }

  // Newline?
  private static boolean Scenario_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Scenario_7")) return false;
    Newline(b, l + 1);
    return true;
  }

  // ((Step |StepComment)+ Examples?)*
  private static boolean Scenario_8(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Scenario_8")) return false;
    int c = current_position_(b);
    while (true) {
      if (!Scenario_8_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Scenario_8", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // (Step |StepComment)+ Examples?
  private static boolean Scenario_8_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Scenario_8_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Scenario_8_0_0(b, l + 1);
    r = r && Scenario_8_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (Step |StepComment)+
  private static boolean Scenario_8_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Scenario_8_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Scenario_8_0_0_0(b, l + 1);
    int c = current_position_(b);
    while (r) {
      if (!Scenario_8_0_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Scenario_8_0_0", c)) break;
      c = current_position_(b);
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // Step |StepComment
  private static boolean Scenario_8_0_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Scenario_8_0_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Step(b, l + 1);
    if (!r) r = StepComment(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // Examples?
  private static boolean Scenario_8_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Scenario_8_0_1")) return false;
    Examples(b, l + 1);
    return true;
  }
